--- a/templates/index.html
+++ b/templates/index.html
@@ -22,14 +22,16 @@ body, html {height: 100%}
     Logo
   </div>
   <div class="w3-display-middle">
-    <h1 class="w3-jumbo w3-animate-top">COMING SOON</h1>
-    <hr class="w3-border-grey" style="margin:auto;width:40%">
-    <p class="w3-large w3-center">35 days left</p>
+      <video playsinline autoplay></video>
+  </div>
+  <div class="w3-display-middle">
+      <canvas></canvas>
   </div>
   <div class="w3-display-bottomleft w3-padding-large">
     Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a>
   </div>
 </div>
+<script src="{{url_for('static', filename='main.js')}}" async></script>
 
 </body>
 </html>
