--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,7 @@ body, html {height: 100%}
     background-size: cover;
 }
 </style>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <body>
 
 <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
