--- a/templates/todos.html
+++ b/templates/todos.html
@@ -23,15 +23,17 @@ body, html {height: 100%}
   </div>
   <div class="w3-display-middle">
           {% for todo in todos %}
-  <input type="checkbox" id="td{{todo.id}}">{{ todo.text }}<br>
+  <input type="checkbox"
+         id="td{{todo.id}}"
+         onclick="handleCBchange(this, {{todo.id}})"
+         {% if todo.done %}checked{% endif %}>{{ todo.text }}<br>
       {% endfor %}
-
-
   </div>
   <div class="w3-display-bottomleft w3-padding-large">
     Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a>
   </div>
 </div>
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="{{url_for('static', filename='todo.js')}}" async></script>
 </body>
 </html>
