--- a/templates/index.html
+++ b/templates/index.html
@@ -28,6 +28,10 @@ body, html {height: 100%}
   <div class="w3-display-middle">
       <canvas></canvas>
   </div>
+  <div id="target" class="w3-display-middle" style="visibility: hidden">
+      <button type="button" id="retakeButton">Retake picture</button>
+      <button type="button" id="sendButton">Send</button>
+  </div>
   <div class="w3-display-bottomleft w3-padding-large">
     Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a>
   </div>
