--- a/templates/result.html
+++ b/templates/result.html
@@ -29,6 +29,15 @@ body, html {height: 100%}
             {{ sender }}
             {{ type }}
         </p>
+        {% if hasTodo %}
+        <p>
+            {{ todo }}
+        </p>
+        <button type="button" id="createButton" docId="{{ docId }}">Create Todo</button>
+        {% endif %}
+        <form action="/">
+            <input type="submit" value="Go back" />
+        </form>
     </div>
   <div class="w3-display-bottomleft w3-padding-large">
     Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a>
