--- a/templates/tryout/index.html
+++ b/templates/tryout/index.html
@@ -4,7 +4,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="w3school.css">
 <body>
-
+ <div class="w3-bar w3-green">
+  <a href="#" class="w3-bar-item w3-button">Take Photo</a>
+  <a href="#" class="w3-bar-item w3-button">Upload File</a>
+  <a href="#" class="w3-bar-item w3-button">Task list</a>
+</div> 
 <div class="w3-container w3-green">
   <h1>W3Schools Demo</h1> 
   <p>Resize this responsive page!</p> 
@@ -16,7 +20,7 @@
     <p>loading...</p>
   </div>
 
-  <div class="w3-third">
+  <div class="w3-third w3-green">
     <h2>Paris</h2>
     <p>Paris is the capital of France.</p> 
     <p>The Paris area is one of the largest population centers in Europe,
