--- a/templates/index.html
+++ b/templates/index.html
@@ -1,42 +1,17 @@
 <!DOCTYPE html>
 <html>
-<title>W3.CSS Template</title>
-<meta charset="UTF-8">
+<title>W3.CSS</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-<style>
-body,h1 {font-family: "Raleway", sans-serif}
-body, html {height: 100%}
-.bgimg {
-    background-image: url({{url_for('static', filename='forestbridge.jpg')}});
-    min-height: 100%;
-    background-position: center;
-    background-size: cover;
-}
-</style>
+<link rel="stylesheet" href="{{url_for('static', filename='w3school.css')}}">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <body>
-
-<div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
-  <div class="w3-display-topleft w3-padding-large w3-xlarge">
-    Logo
-  </div>
-  <div class="w3-display-middle">
-      <video playsinline autoplay></video>
-  </div>
-  <div class="w3-display-middle">
-      <canvas></canvas>
-  </div>
-  <div id="target" class="w3-display-middle" style="visibility: hidden">
-      <button type="button" id="retakeButton">Retake picture</button>
-      <button type="button" id="sendButton">Send</button>
-  </div>
-  <div class="w3-display-bottomleft w3-padding-large">
-    Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a>
-  </div>
+ <div class="w3-bar w3-green">
+  <a href="#" class="w3-bar-item w3-button" onclick="load_photo_screen()">Take Photo</a>
+  <a href="#" class="w3-bar-item w3-button" onclick="">Upload File</a>
+  <a href="#" class="w3-bar-item w3-button" onclick="">Task list</a>
 </div>
-<script src="{{url_for('static', filename='main.js')}}" async></script>
-
+<div id="content"></div>
+<script src="{{url_for('render_js', jsname='main_xx.js')}}" async></script>
 </body>
 </html>
+
