--- a/templates/result.html
+++ b/templates/result.html
@@ -1,30 +1,8 @@
-<!DOCTYPE html>
-<html>
-<title>W3.CSS Template</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-<style>
-body,h1 {font-family: "Raleway", sans-serif}
-body, html {height: 100%}
-.bgimg {
-    background-image: url({{url_for('static', filename='forestbridge.jpg')}});
-    min-height: 100%;
-    background-position: center;
-    background-size: cover;
-}
-</style>
-<body>
-
-<div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
-  <div class="w3-display-topleft w3-padding-large w3-xlarge">
-    Logo
-  </div>
-  <div class="w3-display-left">
+<div class="w3-row-padding">
+  <div class="w3-half">
       <img src="{{url_for('static', filename=fname)}}">
   </div>
-    <div class="w3-display-right">
+    <div class="w3-half">
         <p>
             {{ sender }}
             {{ type }}
@@ -39,11 +17,5 @@ body, html {height: 100%}
             <input type="submit" value="Go back" />
         </form>
     </div>
-  <div class="w3-display-bottomleft w3-padding-large">
-    Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a>
-  </div>
 </div>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="{{url_for('static', filename='todo.js')}}" async></script>
-</body>
-</html>
