todolist added to ajax method

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
  <div class="w3-bar w3-green">
   <a href="#" class="w3-bar-item w3-button" onclick="load_photo_screen()">Take Photo</a>
   <a href="#" class="w3-bar-item w3-button" onclick="">Upload File</a>
-  <a href="#" class="w3-bar-item w3-button" onclick="">Task list</a>
+  <a href="#" class="w3-bar-item w3-button" onclick="load_todo_screen()">Task list</a>
 </div>
 <div id="content"></div>
 <script src="{{url_for('render_js', jsname='main_xx.js')}}" async></script>
