static urls in js replaced

--- a/templates/html/index.html
+++ b/templates/html/index.html
@@ -11,7 +11,7 @@
   <a href="#" class="w3-bar-item w3-button" onclick="load_todo_screen()">Task list</a>
 </div>
 <div id="content"></div>
-<script src="{{url_for('render_js', jsname='main_xx.js')}}" async></script>
+<script src="{{url_for('render_js', jsname='index.js')}}" async></script>
 </body>
 </html>
 
