--- a/templates/html/index.html
+++ b/templates/html/index.html
@@ -7,7 +7,7 @@
 <body>
  <div class="w3-bar w3-green">
   <a href="#" class="w3-bar-item w3-button" onclick="load_photo_screen()">Take Photo</a>
-  <a href="#" class="w3-bar-item w3-button" onclick="">Upload File</a>
+  <a href="#" class="w3-bar-item w3-button" onclick="load_upload_screen()">Upload File</a>
   <a href="#" class="w3-bar-item w3-button" onclick="load_todo_screen()">Task list</a>
 </div>
 <div id="content"></div>
